package iface;

public interface ILoanFeeCalculation {
    void calculateLoalFee();
}
